--- a/package.json
+++ b/package.json
@@ -1,33 +1,14 @@
 {
-  "name": "chatbot-frontend",
+  "name": "your-app-name",
   "version": "1.0.0",
-  "description": "Frontend for chatbot",
-  "main": "src/index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "npm run build",
+    "start": "node src/index.js"
   },
   "dependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-icons": "^5.2.1",
-    "react-scripts": "5.0.0"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "express": "^4.17.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3"
   }
 }
