--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "src/index.js",
-      "use": "@vercel/node"
+      "src": "package.json",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "build"
+      }
     }
   ],
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/index.js"
-    }
+    { "src": "/(.*)", "dest": "/public/index.html" }
   ]
 }
